fix: scrollbar size

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 15px;
 }
 
 /* Track */
